--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
   <table>
     <tr>
-      <td> <img src="Parent-Package/Images/Daycare pic.jpg" alt="Blueberry Muffins Childcare Profile Picture"></td>
+      <td> <img src="Images/Daycare pic.jpg" alt="Blueberry Muffins Childcare Profile Picture"></td>
       <td>
         <h1> Blueberry Muffins Child Care (Vancouver) Society <br /><a href="Contact us.html">Contact us</a></h1>
       </td>
